// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/presets/internal/regex-managers Update \`_VERSION\` environment variables in GitHub Actions files find dependencies in github-workflow.yaml 1`] = `
{
  "deps": [
    {
      "currentValue": "18.13.0",
      "datasource": "node",
      "depName": "node",
      "replaceString": "# renovate: datasource=node depName=node versioning=node
  NODE_VERSION: 18.13.0
",
      "versioning": "node",
    },
    {
      "currentValue": "7.25.1",
      "datasource": "npm",
      "depName": "pnpm",
      "replaceString": "# renovate: datasource=npm depName=pnpm
  PNPM_VERSION: "7.25.1"
",
    },
    {
      "currentValue": "3.3.1",
      "datasource": "npm",
      "depName": "yarn",
      "replaceString": "# renovate: datasource=npm depName=yarn
  YARN_VERSION: '3.3.1'
",
    },
  ],
  "matchStrings": [
    "# renovate: datasource=(?<datasource>[a-z-]+?) depName=(?<depName>[^\\s]+?)(?: (?:lookupName|packageName)=(?<packageName>[^\\s]+?))?(?: versioning=(?<versioning>[a-z-0-9]+?))?\\s+[A-Za-z0-9_]+?_VERSION\\s*:\\s*["']?(?<currentValue>.+?)["']?\\s",
  ],
}
`;

exports[`config/presets/internal/regex-managers Update \`_VERSION\` variables in Dockerfiles find dependencies in Dockerfile 1`] = `
{
  "deps": [
    {
      "currentValue": "18",
      "datasource": "docker",
      "depName": "node",
      "replaceString": "# renovate: datasource=docker depName=node versioning=docker
ARG NODE_VERSION=18
",
      "versioning": "docker",
    },
    {
      "currentValue": "7.25.1",
      "datasource": "npm",
      "depName": "pnpm",
      "replaceString": "# renovate: datasource=npm depName=pnpm
ENV PNPM_VERSION="7.25.1"
",
    },
    {
      "currentValue": "'3.3.1'",
      "datasource": "npm",
      "depName": "yarn",
      "replaceString": "# renovate: datasource=npm depName=yarn
ARG YARN_VERSION='3.3.1'
",
    },
  ],
  "matchStrings": [
    "# renovate: datasource=(?<datasource>[a-z-]+?) depName=(?<depName>[^\\s]+?)(?: (lookupName|packageName)=(?<packageName>[^\\s]+?))?(?: versioning=(?<versioning>[^\\s]+?))?(?: registryUrl=(?<registryUrl>[^\\s]+?))?\\s(?:ENV|ARG) .+?_VERSION[ =]"?(?<currentValue>.+?)"?\\s",
  ],
}
`;

exports[`config/presets/internal/regex-managers Update \`appVersion\` value in Helm chart Chart.yaml find dependencies in Chart.yaml 1`] = `
{
  "datasourceTemplate": "docker",
  "deps": [
    {
      "currentValue": "19.4.0",
      "datasource": "docker",
      "depName": "node",
      "replaceString": "# renovate: image=node
appVersion: 19.4.0",
    },
    {
      "currentValue": "3.11.1",
      "datasource": "docker",
      "depName": "python",
      "replaceString": "# renovate: image=python
appVersion: "3.11.1",
    },
    {
      "currentValue": "15.1",
      "datasource": "docker",
      "depName": "postgres",
      "replaceString": "# renovate: image=postgres
appVersion: '15.1",
    },
  ],
  "matchStrings": [
    "#\\s*renovate: image=(?<depName>.*?)\\s+appVersion:\\s*["']?(?<currentValue>[\\w+\\.\\-]*)",
  ],
}
`;
